Generate Pelican site

--- a/pages/about-this-blog.html
+++ b/pages/about-this-blog.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="../theme/css/theme.css">
 
   <link rel="alternate" type="application/atom+xml" title="Full Atom Feed"
-        href="rapphil.github.io/feeds/all.atom.xml">
+        href="/feeds/all.atom.xml">
   
   <meta name="description" content="The contents of this blogs and ideas and texts found here are solely my own, and do not express the views or opinions of my employer.">
 
