--- a/multimaster-replication-in-postgresql-with-bdr.html
+++ b/multimaster-replication-in-postgresql-with-bdr.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="./theme/css/theme.css">
 
   <link rel="alternate" type="application/atom+xml" title="Full Atom Feed"
-        href="/feeds/all.atom.xml">
+        href="https://rapphil.github.io/feeds/all.atom.xml">
   
   <meta name="description" content="Installing PostgreSQL Handling sequences Migrating your database to BDR.">
 
